text er background e image bosaia animation done

--- a/css/style.css
+++ b/css/style.css
@@ -6,5 +6,26 @@
 
 .main{
     height: 100vh;
-    background: linear-gradient(135deg, #5EEAD4, #FDA4AF);
+    background: linear-gradient(135deg, #007a68, #ae5761);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.main h1{
+    font-size: 8rem;
+    font-weight: 900;
+    background-image: url('/images/mountain02.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-clip: text;
+    color: transparent;
+    animation: animate 20s linear infinite;
+    font-family: "Poppins", sans-serif;
+  font-weight: 900;
+  letter-spacing: 10px;
+}
+@keyframes animate {
+    to{
+        background-position-x: -500px;
+    }
 }
