--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 .main h1{
     font-size: 8rem;
     font-weight: 900;
-    background-image: url('/images/mountain02.jpeg');
+    background-image: url('../images/mountain02.jpeg');
     background-size: cover;
     background-position: center;
     background-clip: text;
